--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,7 +14,7 @@
   
   <!-- Script -->
   <script type="text/javascript" src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
-  <script type="text/javascript" src="/assets/js/jquery.cycle2.min.js"></script>
+  <script type="text/javascript" src="assets/js/jquery.cycle2.min.js"></script>
   <script type="text/javascript" src="http://www.unexpect.kr/js/jquery-ui.min.js"></script>
   <script type="text/javascript" src="http://www.unexpect.kr/js/jquery.mousewheel.min.js"></script>
   <script type="text/javascript" src="http://www.unexpect.kr/js/jquery.cycle2.carousel.min.js"></script>
