--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -316,7 +316,7 @@ p.cycle-slide {
 }
 .page.second .wrap_txt04 {
 	position: absolute !important;
-	top: 80%;50%: 18%;
+	top: 80%;
 	left: 15%;
 }
 .page.second .wrap_txt04 a {
