--- a/assets/css/page.scss
+++ b/assets/css/page.scss
@@ -297,17 +297,17 @@ html,
   }
   .bg.first {
     background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)),
-      url("/assets/images/unsplash-1.jpg");
+      url("../images/unsplash-1.jpg");
     background-position: center center;
   }
   .bg.second {
     background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)),
-      url("/assets/images/unsplash-2.jpg");
+      url("../images/unsplash-2.jpg");
     background-position: center center;
   }
   .bg.third {
     background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)),
-      url("/assets/images/unsplash-3.jpg");
+      url("../images/unsplash-3.jpg");
     background-position: center center;
   }
 
